--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -33,6 +33,7 @@
                     </h3>
                     <p:commandButton id="save" value="#{msgs.speichern}"
                                      action="#{BenutzerverwaltungForm.save}"
+                                     id="saveUserButton"
                                      update="notifications"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
