Fix process titles not being saved and popup dialogs content not being udpated

--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -35,6 +35,7 @@
                                      action="#{ProzessverwaltungForm.saveAndRedirect}"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
+                                     immediate="true"
                                      onclick="PF('notifications').renderMessage({'summary':'#{msgs.processSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                                      update="notifications"/>
                     <p:button id="cancel" value="#{msgs.abbrechen}"
