--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -129,6 +129,7 @@
                                 </p:column>
                             </p:dataTable>
                             <button onclick="PF('addUserGroupDialog').show()"
+                                    id="addUserGroupButton"
                                     type="button"
                                     class="ui-button ui-widget ui-corner-all button-filled-green"
                                     style="padding:.7em;border:none;">
