added central delay times config to browser class

--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -33,6 +33,7 @@
                     </h3>
                     <p:commandButton id="save" value="#{msgs.speichern}"
                                      action="#{BenutzergruppenForm.save}"
+                                     id="saveUserGroupButton"
                                      process="usergroupTabView:authoritiesGlobalPick, usergroupTabView:authoritiesClientPick, usergroupTabView:titleInput, usergroupTabView:authoritiesProjectPick"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
