--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -35,14 +35,13 @@
                                      action="#{ProzessverwaltungForm.saveTaskAndRedirect}"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
-                                     immediate="true"
                                      onclick="PF('notifications').renderMessage({'summary':'#{msgs.taskSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                                      update="notifications"/>
                     <p:button id="cancel" value="#{msgs.abbrechen}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"
                               icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
                 </p:panel>
                 <p:messages autoUpdate="true"/>
-                <p:tabView id="tabs" activeIndex="#{param.tabId}">
+                <p:tabView id="tabs">
                     <p:tab title="#{msgs.details}">
                         <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml"/>
                     </p:tab>
